--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <title>Menéame Reader</title>
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
-    <meta name="description" content="Meneame Reader" />
+    <meta name="description" content="Menéame Reader" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    <h1><a href="/">Menéame Reader</a></h1>
+    <h1 id="header">Menéame Reader</h1>
     <div id="content"></div>
 
     <script src="js/router.js"></script>
